# EchoNanny

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-build-linux.yml  release-artifacts.yml
backend/: .env  .env.example  Dockerfile
backend/app/: __init__.py  cli.py  deps.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  live.py  recordings.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: session.py
backend/app/services/: audio.py
frontend/: .env  .env.example  Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.vue  api.js  router.js  styles.css
frontend/src/components/: TimelineBar.vue
frontend/src/views/: DashboardView.vue  LoginView.vue
packaging/inno/: echonanny.iss
packaging/pyinstaller/: echonanny.spec
scripts/: build_inno_installer.py  build_pyinstaller.py  build_wheels.py  install.ps1  install.sh  sync_webui_bundle.py
